# cgopt-model

./: .gitignore  .travis.yml  .travis.yml.orig  CMakeLists.txt  ModelSettings.h  Optimization.h  Options.h  README.md  Target.cpp  Target.h  main.cpp
include/catch/: catch.hpp
src/: ModelSettings.h  Optimization.h  Options.h  State.cpp  State.h  Target.h
src/internal/: CudaManaged.h  EmptyBase.h
test/: ModelTest.cpp  OptionsTest.cpp  SerializationTest.cpp  TestConfig.h
